# tweet-analysis-with-llm

./: .gitignore  README.md  pyproject.toml
tweet_analysis_with_llama3/: chainlit.md  main.py
tweet_analysis_with_llama3/template/: analysis.py  analysis.txt  summarization.txt
